--- a/VoxVisio/VoxVisio/VoxVisio.csproj
+++ b/VoxVisio/VoxVisio/VoxVisio.csproj
@@ -97,7 +97,7 @@
     <Compile Include="MainEngine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StandardState.cs" />
+    <Compile Include="CommandState.cs" />
     <Compile Include="ToastForm.cs">
       <SubType>Form</SubType>
     </Compile>
