--- a/VoxVisio/VoxVisio/packages.config
+++ b/VoxVisio/VoxVisio/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="InputSimulator" version="1.0.4.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" requireReinstallation="True" />
+  <package id="InputSimulator" version="1.0.4.0" targetFramework="net4" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" requireReinstallation="true" userInstalled="true" />
+  <package id="NLog" version="4.1.0" targetFramework="net45" userInstalled="true" />
 </packages>
