--- a/VoxVisio/VoxVisioTests/packages.config
+++ b/VoxVisio/VoxVisioTests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net4" userInstalled="true" />
+  <package id="NLog" version="4.1.0" targetFramework="net45" userInstalled="true" />
 </packages>
