--- a/VoxVisio/VoxVisio/VoxVisio.csproj
+++ b/VoxVisio/VoxVisio/VoxVisio.csproj
@@ -103,10 +103,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\CommandState.cs" />
-    <Compile Include="ZoomForm.cs">
+    <Compile Include="UI\ZoomForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ZoomForm.Designer.cs">
+    <Compile Include="UI\ZoomForm.Designer.cs">
       <DependentUpon>ZoomForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Screen Overlay\OverlayForm.resx">
@@ -125,12 +125,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ZoomForm.resx">
+    <EmbeddedResource Include="UI\ZoomForm.resx">
       <DependentUpon>ZoomForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
-    <None Include="Commands\Commands.json" />
+    <None Include="Resources\Commands.json" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -143,8 +143,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="favicon.ico" />
-    <None Include="Resources\favicon.ico" />
+    <None Include="Resources\Images\favicon.ico" />
     <Content Include="Tobii.EyeX.Client.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
