--- a/VoxVisio/VoxVisio/VoxVisio.csproj
+++ b/VoxVisio/VoxVisio/VoxVisio.csproj
@@ -84,6 +84,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\Command.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="States\ControlContext.cs" />
     <Compile Include="States\ControlState.cs" />
     <Compile Include="States\DictationState.cs" />
@@ -110,10 +115,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\CommandState.cs" />
-    <Compile Include="ZoomForm.cs">
+    <Compile Include="UI\ZoomForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ZoomForm.Designer.cs">
+    <Compile Include="UI\ZoomForm.Designer.cs">
       <DependentUpon>ZoomForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Screen Overlay\OverlayForm.resx">
@@ -124,15 +129,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <EmbeddedResource Include="ZoomForm.resx">
+    <EmbeddedResource Include="UI\ZoomForm.resx">
       <DependentUpon>ZoomForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
@@ -150,11 +150,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="favicon.ico" />
-    <None Include="Resources\DownArrow.png" />
-    <Content Include="UpArrow.png" />
-    <Content Include="VoxLogo.png" />
-    <None Include="Resources\favicon.ico" />
+    <None Include="Resources\Images\Command State\DownArrow.png" />
+    <Content Include="Resources\Images\Command State\UpArrow.png" />
+    <Content Include="Resources\Images\Icons\VoxLogo.png" />
+    <None Include="Resources\Images\Icons\favicon.ico" />
     <Content Include="Tobii.EyeX.Client.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -183,6 +182,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\Images\Dictation State\" />
+    <Folder Include="Resources\Images\Help Form\" />
+    <Folder Include="Resources\Images\Main Form\" />
+    <Folder Include="Resources\Images\Settings Form\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
