Updating Command classes
Gave classes the ability to write and read their own json object, and
renames the Verbal command class.

--- a/VoxVisio/VoxVisio/VoxVisio.csproj
+++ b/VoxVisio/VoxVisio/VoxVisio.csproj
@@ -91,6 +91,7 @@
     </Compile>
     <Compile Include="Screen Overlay\StateController.cs" />
     <Compile Include="Singletons\EventSingleton.cs" />
+    <Compile Include="Singletons\SettingsSingleton.cs" />
     <Compile Include="Singletons\SharedFormsSingleton.cs" />
     <Compile Include="Singletons\SharedObjectsSingleton.cs" />
     <Compile Include="States\ControlContext.cs" />
