Created start of for adding commands

--- a/VoxVisio/VoxVisio/VoxVisio.csproj
+++ b/VoxVisio/VoxVisio/VoxVisio.csproj
@@ -109,6 +109,12 @@
     <Compile Include="Screen Overlay\ScrollManager.cs" />
     <Compile Include="Screen Overlay\Toast.cs" />
     <Compile Include="SharedDataSingleton.cs" />
+    <Compile Include="UI\CreateCommandForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\CreateCommandForm.Designer.cs">
+      <DependentUpon>CreateCommandForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\HelpForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +146,9 @@
     </Compile>
     <EmbeddedResource Include="Screen Overlay\OverlayForm.resx">
       <DependentUpon>OverlayForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\CreateCommandForm.resx">
+      <DependentUpon>CreateCommandForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\HelpForm.resx">
       <DependentUpon>HelpForm.cs</DependentUpon>
