--- a/VoxVisio/VoxVisio/packages.config
+++ b/VoxVisio/VoxVisio/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FMUtils.KeyboardHook" version="1.0.140.2145" targetFramework="net45" userInstalled="true" />
-  <package id="InputSimulator" version="1.0.4.0" targetFramework="net4" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" requireReinstallation="true" userInstalled="true" />
+  <package id="FMUtils.KeyboardHook" version="1.0.140.2145" targetFramework="net45" />
+  <package id="InputSimulator" version="1.0.4.0" targetFramework="net4" />
+  <package id="MouseKeyHook" version="5.3.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" requireReinstallation="true" />
 </packages>
