--- a/VoxVisio/VoxVisio/VoxVisio.csproj
+++ b/VoxVisio/VoxVisio/VoxVisio.csproj
@@ -94,6 +94,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Resources\EventList.cs" />
+    <Compile Include="Screen Overlay\FixationDot.cs" />
     <Compile Include="Screen Overlay\StateController.cs" />
     <Compile Include="Screen Overlay\StateHotspot.cs" />
     <Compile Include="Singletons\EventSingleton.cs" />
