Converted settings to using built in settings file

--- a/VoxVisio/VoxVisio/VoxVisio.csproj
+++ b/VoxVisio/VoxVisio/VoxVisio.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Screen Overlay\KeyboardManager.cs" />
     <Compile Include="Screen Overlay\StateController.cs" />
     <Compile Include="Screen Overlay\StateHotspot.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Singletons\EventSingleton.cs" />
     <Compile Include="Singletons\SettingsSingleton.cs" />
     <Compile Include="Singletons\SharedFormsSingleton.cs" />
