--- a/VoxVisio/VoxVisio/app.config
+++ b/VoxVisio/VoxVisio/app.config
@@ -1,3 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+<configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <section name="VoxVisio.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+</configSections>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
+    <userSettings>
+        <VoxVisio.Properties.Settings>
+            <setting name="ZoomEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="ZoomMagnification" serializeAs="String">
+                <value>3</value>
+            </setting>
+            <setting name="ZoomFormSize" serializeAs="String">
+                <value>400, 350</value>
+            </setting>
+            <setting name="DebugEyeMouseMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </VoxVisio.Properties.Settings>
+    </userSettings>
+</configuration>
