Fixed merge issues.

--- a/VoxVisio/VoxVisio/Properties/Settings.settings
+++ b/VoxVisio/VoxVisio/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="DebugEyeMouseMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="DragonEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
