--- a/VoxVisio/VoxVisio/app.config
+++ b/VoxVisio/VoxVisio/app.config
@@ -20,6 +20,9 @@
             <setting name="DebugEyeMouseMode" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="DragonEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
         </VoxVisio.Properties.Settings>
     </userSettings>
 </configuration>
