Starting work on keeping states as variable and not recreating them

--- a/VoxVisio/VoxVisio/VoxVisio.csproj
+++ b/VoxVisio/VoxVisio/VoxVisio.csproj
@@ -116,6 +116,7 @@
     </Compile>
     <Compile Include="Screen Overlay\ScrollManager.cs" />
     <Compile Include="Screen Overlay\Toast.cs" />
+    <Compile Include="States\eState.cs" />
     <Compile Include="UI\HelpForm.cs">
       <SubType>Form</SubType>
     </Compile>
