Added  & Implemented Settings value for Optikey

--- a/VoxVisio/VoxVisio/Properties/Settings.settings
+++ b/VoxVisio/VoxVisio/Properties/Settings.settings
@@ -15,7 +15,10 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DragonEnabled" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="OptiKeyEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
