--- a/VoxVisio/VoxVisio/app.config
+++ b/VoxVisio/VoxVisio/app.config
@@ -21,7 +21,10 @@
                 <value>False</value>
             </setting>
             <setting name="DragonEnabled" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
+            </setting>
+            <setting name="OptiKeyEnabled" serializeAs="String">
+                <value>False</value>
             </setting>
         </VoxVisio.Properties.Settings>
     </userSettings>
