Added system tray icon
New form that displays a system tray icon, and brings up the settings
from when clicked.

--- a/VoxVisio/VoxVisio/app.config
+++ b/VoxVisio/VoxVisio/app.config
@@ -27,10 +27,10 @@
                 <value>False</value>
             </setting>
             <setting name="OptiKeyFileAddress" serializeAs="String">
-                <value>""</value>
+                <value />
             </setting>
             <setting name="DragonFileAddress" serializeAs="String">
-                <value>""</value>
+                <value />
             </setting>
         </VoxVisio.Properties.Settings>
     </userSettings>
