--- a/VoxVisio/VoxVisio/VoxVisio.csproj
+++ b/VoxVisio/VoxVisio/VoxVisio.csproj
@@ -100,6 +100,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Resources\EventDictionary.cs" />
     <Compile Include="Resources\EventList.cs" />
     <Compile Include="Screen Overlay\FixationDot.cs" />
     <Compile Include="Screen Overlay\KeyboardManager.cs" />
