Updating Newtonsoft Json version

--- a/VoxVisio/VoxVisio/packages.config
+++ b/VoxVisio/VoxVisio/packages.config
@@ -3,5 +3,5 @@
   <package id="FMUtils.KeyboardHook" version="1.0.140.2145" targetFramework="net45" />
   <package id="InputSimulator" version="1.0.4.0" targetFramework="net4" />
   <package id="MouseKeyHook" version="5.3.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net4" requireReinstallation="true" />
+  <package id="Newtonsoft.Json" version="8.0.1-beta1" targetFramework="net45" />
 </packages>
